--- a/css/style.css
+++ b/css/style.css
@@ -104,12 +104,11 @@ img {
   --scroll-size: 8px;
 }
 
-body {
-  background: linear-gradient(135deg, rgba(15, 23, 42, 0.85), rgba(31, 41, 55, 0.9)), url("../img/bg/background-main.webp");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
+html {
+  -ms-touch-action: manipulation;
+      touch-action: manipulation;
+  overscroll-behavior-y: none;
+  background-color: #0f172a;
 }
 
 /* Scroll main*/
